bin/tests/sema/compiler/global_if_error.swg
#global fileprivate
#global #if "true" // swc-expected-error {{sema_err_cannot_cast}}

#test
{
}
